# oauth-codex

./: CHANGELOG.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: migration_openai_to_oauth_codex.md  stream_event_schema_v1.md
docs/en/: index.md  unsupported-matrix.md
docs/en/methods/: client.md  files.md  models.md  module_level.md  removed_apis.md  request_options.md  responses.md  vector_stores.md
docs/ko/: index.md  unsupported-matrix.md
docs/ko/methods/: client.md  files.md  models.md  module_level.md  removed_apis.md  request_options.md  responses.md  vector_stores.md
examples/: async_smoke_test.py  beta_run_tools_smoke_test.py  image_input_smoke_test.py  login_smoke_test.py  module_level_smoke_test.py  request_options_smoke_test.py  responses_api_smoke_test.py
src/oauth_codex/: __init__.py  _base_client.py  _client.py  _engine.py  _exceptions.py  _models.py  _module_client.py  _resource.py  _sdk_client.py  _streaming.py  _types.py  _version.py  auth.py  client.py  compat_store.py  core_types.py  errors.py  legacy_auth.py  legacy_types.py  store.py  tooling.py  types.py  version.py
src/oauth_codex/auth/: __init__.py  _oauth.py  _provider.py  config.py  pkce.py  store.py  token_manager.py
src/oauth_codex/compat/: __init__.py  continuity.py  (+1 more)
tests/: conftest.py  test_auth.py  test_backend_tool_loop_contract.py  test_beta_chat_completions.py  test_client_async.py  test_client_authentication.py  test_client_generate.py  test_client_model_validation.py  test_client_resource_surface.py  test_client_stream.py  test_engine_stream_and_continuity.py  test_error_model.py  test_files_vector_supported.py  test_generate_async.py  test_generate_sync.py  test_local_compat_storage.py  test_method_signatures.py  test_migration_contract.py  test_model_capabilities.py  test_module_client_proxy.py  test_observability_hooks.py  test_openai_compat_files_vector.py  test_openai_compat_input_tokens.py  test_openai_compat_responses.py  test_public_api_docstrings.py  test_public_surface.py  test_reasoning_mapping.py  test_request_overrides.py  test_responses_supported.py  test_retry_policy.py  test_store.py  test_store_behavior.py  test_structure_parity.py  test_sync_async_parity.py  test_tool_call_events.py  test_tooling.py  test_tooling_strict_schema.py  test_unsupported_resources.py  test_usage_consistency.py  test_validation_modes.py  (+1 more)
(+82 files in other folders)
