[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oauth-codex"
version = "1.1.0"
description = "Codex OAuth-based Python LLM SDK with manual function calling workflow"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = [
  "httpx>=0.27.0",
  "keyring>=25.0.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oauth_codex = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
