[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oauth-codex"
dynamic = ["version"]
description = "Codex OAuth-based Python SDK with resource-style Client and AsyncClient APIs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = [
  "httpx>=0.27.0",
  "keyring>=25.0.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "twine>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "oauth_codex._version.__version__"}

[tool.setuptools.package-data]
oauth_codex = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
